--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 'default'
+        go-version: '1.21.6'
 
     - name: Build Go app for ARM Linux
       run: GOOS=linux GOARCH=arm go build -o base .
